Perkin-UAT/force-app/main/default/objects/Calibration_Event__c/Calibration_Event__c.object-meta.xml
<CustomObject>
    <description>Child object of Installed Product to track the individual calibration events for a particular calibrated tool.- Part of ServiceMax</description>
    <label>Calibration Event</label>
    <nameField>
        <displayFormat>CE-{00000000}</displayFormat>
        <label>Calibration Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calibration Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>