Perkin-UAT/force-app/main/default/objects/Calibration_Event__c/fields/Calibrated_Tool__c.field-meta.xml
<CustomField>
    <fullName>Calibrated_Tool__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Calibrated Tool</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SVMXC__Installed_Product__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Calibrated Tools</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Calibration Events</relationshipLabel>
    <relationshipName>Calibration_Events</relationshipName>
    <type>Lookup</type>
</CustomField>