Perkin-UAT/force-app/main/default/objects/Calibration_Event__c/fields/Legacy_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Owner_Name__c</fullName>
    <description>The record owner from the legacy ServiceMax org.</description>
    <label>Legacy Record Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>