Perkin-UAT/force-app/main/default/objects/Calibration_Event__c/fields/SMAX_PS_As_Left_Result__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_As_Left_Result__c</fullName>
    <label>As Left Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>