Perkin-UAT/force-app/main/default/objects/Calibration_Event__c/fields/SMAX_PS_Calibration_Completed__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Calibration_Completed__c</fullName>
    <label>Calibration Completed</label>
    <type>Date</type>
</CustomField>