Perkin-UAT/force-app/main/default/objects/Calibration_Event__c/fields/SMAX_PS_Reason__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Reason__c</fullName>
    <description>Reason for making the changes</description>
    <inlineHelpText>Reason for making the changes</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Correction</fullName>
            </value>
            <value>
                <fullName>Calibration Date Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>