Perkin-UAT/force-app/main/default/objects/Calibration_Event__c/fields/SVMX_PS_Calibration_Period__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Calibration_Period__c</fullName>
    <formula>TEXT(Calibrated_Tool__r.SMAX_PS_MTE_Calibration_Period__c)</formula>
    <label>Calibration Period</label>
    <type>Text</type>
</CustomField>